# RealEstate--Autoagent

./: Dockerfile  README.md  pyproject.toml  requirements.txt
agents/: README.md
app/: main.py
backend/: __init__.py
backend/app/: agents.py  data.py  domain.py  evaluation.py  evaluator.py  main.py  memory.py  observability.py  proposal.py  workflow.py
data/: psi_listings.json
docs/: demo-script.md  evaluation.md
evals/: golden_inquiries.json  test_api.py
frontend/: README.md
psi-autoagent/: .env.example  .gitignore  README.md  pyproject.toml
psi-autoagent/app/: __init__.py  agents.py  data.py  proposal.py  workflow.py
scripts/: demo_batch.py
tests/: test_api.py
