[project]
name = "real-estate-auto-agent"
version = "0.1.0"
description = "Observable, human-governed property investment proposal agent"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.4,<3",
  "langgraph>=0.2.60,<0.3",
  "reportlab>=4.2,<5",
  "httpx>=0.27,<1",
]

[project.optional-dependencies]
chroma = ["chromadb>=0.5.23,<1"]
dev = ["pytest>=8,<9"]

[tool.pytest.ini_options]
testpaths = ["evals"]
pythonpath = ["."]
